--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   },
-  "overrides": {"eslint":"9.8.0"},
+  "overrides": {"eslint":"^9.8.0"},
   "repository": {
     "type": "git",
     "url": "https://github.com/DIY0R/name_repo"
