--- a/.github/workflows/checker.yaml
+++ b/.github/workflows/checker.yaml
@@ -3,39 +3,23 @@ name: checker
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main]
-  push:
-    branches: [main]
-
 jobs:
   commitlint:
     environment: commitlint
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install required dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y sudo
-          sudo apt install -y git curl
-          curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
-      - name: Print versions
-        run: |
-          git --version
-          node --version
-          npm --version
-          npx commitlint --version
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
       - name: Install commitlint
         run: |
-          npm install conventional-changelog-conventionalcommits
-          npm install commitlint@latest
-
-      - name: Validate current commit (last commit) with commitlint
-        if: github.event_name == 'push'
-        run: npx commitlint --last --verbose
+          npm install -g commitlint@latest @commitlint/{config-conventional,cli}@latest
 
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
