--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,12 +1,11 @@
 {
     "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "module": "commonjs",
+        "outDir": "./dist",
+        "target": "ES2015"
+    },
     "exclude": [
-        "node_modules",
-        "**/*.spec.ts",
-        "**/*.test.ts",
-        "dist",
-        "test",
-        "jest.config.ts",
-        "tsconfig.json"
+        "test/**/*"
     ]
 }
